fix: anchor links opening iframe and internal storybook links in docs

--- a/docs/guides/styling/Customization.stories.mdx
+++ b/docs/guides/styling/Customization.stories.mdx
@@ -288,7 +288,7 @@ to change specific parts of a component at a global scale in your application ap
 
 Only very specific properties of a component can be customized using the `createTheme` utility varying from component to component.
 Overtime time we will work toward providing more customizable properties for components. However, at the moment, only some components can be customized
-through the theme. For more information, please read the [theming](/docs/guides-theming-theming--main#theme-structure) documentation where a structure of the theme with
+through the theme. For more information, please read the [theming](./?path=/docs/guides-theming--docs#theme-structure) documentation where a structure of the theme with
 the components that are customizable is provided.
 
 In the example below, the border radius and background color of the `HvCard` component was customized.
@@ -379,4 +379,4 @@ const MyApp = () => {
   <GlobalOverride />
 </Story>
 
-Please report to the [theming](/docs/guides-theming-theming--main#theming) documentation for more information.
+Please report to the [theming](./?path=/docs/guides-theming--docs#theming) documentation for more information.
