--- a/docs/guides/theming/WhiteLabeling.stories.mdx
+++ b/docs/guides/theming/WhiteLabeling.stories.mdx
@@ -17,7 +17,7 @@ The white labeling customizations can be implemented at the theme level with the
 one of the default Design System themes (DS3 or DS5) by customizing its global properties, such as font family, colors, shadows, among others, and specific properties
 of the components.
 
-The [theming](/docs/guides-theming-theming--main#theming) documentation offers more detailed information on the default themes' structures and
+The [theming](./?path=/docs/guides-theming--docs#theming) documentation offers more detailed information on the default themes' structures and
 the properties that are customizable as well as the `createTheme` utility.
 
 The example below clearly shows how a theme from the NEXT Design System can be customized to meet different UI guidelines.
@@ -72,4 +72,4 @@ components were able change their default styling.
 </Unstyled>
 
 Implementing deeper customizations to an element than the ones presented above requires you to use others types of customization.
-For more information on how you can customize components, report to the [customization](/docs/guides-styling-customization--inline-styles#customization) documentation.
+For more information on how you can customize components, report to the [customization](./?path=/docs/guides-styling--docs#customization) documentation.
