--- a/docs/guides/visualizations/Visualizations.stories.mdx
+++ b/docs/guides/visualizations/Visualizations.stories.mdx
@@ -9,12 +9,12 @@ import { HvProvider } from "@hitachivantara/uikit-react-core";
 The NEXT UI Kit offers a set of visualizations that enables you to visual display information through graphical representations.
 At the moment, the following visualizations are available and we are continuously working on expanding the selection we offer:
 
-- [KPI](/docs/visualizations-kpi--main)
-- [Table](/docs/visualizations-table--main)
-- [Line chart](/docs/visualizations-line-chart--main)
-- [Bar chart](/docs/visualizations-bar-chart--main)
-- [Donut chart](/docs/visualizations-donut-chart--main)
-- [Confusion matrix](/docs/visualizations-confusion-matrix--main)
+- [KPI](./?path=/docs/visualizations-kpi--docs)
+- [Table](./?path=/docs/visualizations-table--docs)
+- [Line chart](./?path=/docs/visualizations-line-chart--docs)
+- [Bar chart](./?path=/docs/visualizations-bar-chart--docs)
+- [Donut chart](./?path=/docs/visualizations-donut-chart--docs)
+- [Confusion matrix](./?path=/docs/visualizations-confusion-matrix--docs)
 
 The KPI and Table components are available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
@@ -24,7 +24,7 @@ All the information below is only applicable to the visualizations from the `uik
 
 Before using any of the UI Kit visualizations, it's necessary to add the `HvVizProvider` component to your application.
 This component is responsible for enabling theming capabilities for the visualizations. Without this provider the visualizations will not comply to Design System
-and consequently to the UI Kit themes defined by the [`HvProvider` component](/docs/guides-provider--main) from the core package.
+and consequently to the UI Kit themes defined by the [`HvProvider` component](./?path=/docs/guides-provider--docs) from the core package.
 
 The `HvVizProvider` component should preferably be used at the root of your component tree and should always be wrapped by the `HvProvider` component
 since the former uses the themes provided by the latter to configure the visualizations themes.
