--- a/docs/overview/GetStarted.stories.mdx
+++ b/docs/overview/GetStarted.stories.mdx
@@ -51,8 +51,8 @@ const MyApp = ({ children }) => {
 
 This will initialize the UI Kit with the `Design System 5`theme and the `dawn` color mode by default. Depending on your design requirements, you may need to customize or use other themes.
 
-For more information, please report to the [**provider**](/docs/guides-provider--main#provider)
-and [**theming**](/docs/guides-theming--main#theming) documentation.
+For more information, please report to the [**provider**](./?path=/docs/guides-provider--docs#provider)
+and [**theming**](./?path=/docs/guides-theming--docs#theming) documentation.
 
 #### 2. Load the default font
 
@@ -68,7 +68,7 @@ This can be achieved through the **Google Web Fonts CDN** by using the following
 />
 ```
 
-Please, report to the [**typography**](/docs/foundation-typography--main) documentation for more information.
+Please, report to the [**typography**](./?path=/docs/foundation-typography--docs) documentation for more information.
 
 #### 3. Use the components
 
