--- a/docs/overview/status/ProjectStatus.stories.mdx
+++ b/docs/overview/status/ProjectStatus.stories.mdx
@@ -9,7 +9,6 @@ Stay up-to-date on the status of the project and its development. This can help 
 
 - [Versions](#versions)
 - [Supported browsers](#supported-browsers)
-- [Packages](#packages)
 - [DS alignment](#ds-alignment)
 
 ## Versions <a id="versions" />
@@ -23,7 +22,7 @@ The most recent version is recommended for use in production.
 | September 2022 | [UI Kit v4.x](https://lumada-design.github.io/uikit/v4.x)   | [Design System 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [5.x](https://mui.com/)    | 11.x            |
 | October 2020   | [UI Kit v3.x](https://lumada-design.github.io/uikit/v3.x)   | [Design System 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [4.x](https://v4.mui.com/) | -               |
 
-To know more about the practices that are followed for release and versioning, please read our [release and versioning](/docs/overview-community-releases--page) documentation.
+To know more about the practices that are followed for release and versioning, please read our [release and versioning](./?path=/docs/overview-community-releases--docs) documentation.
 
 ## Supported browsers <a id="supported-browsers" />
 
@@ -58,7 +57,7 @@ The following table shows the components alignment with **NEXT DS 5.6.0** and th
   </li>
 </ul>
 
-If you need a component or feature that is not supported, please reach out to us or check our [contribution guide](/docs/overview-community-contributing--page).
+If you need a component or feature that is not supported, please reach out to us or check our [contribution guide](./?path=/docs/overview-community-contributing--docs).
 
 <div>
   {Object.entries(data).map(([key, value]) => (
