--- a/packages/core/src/components/Table/stories/TableHooks/TableHooks.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/TableHooks.stories.mdx
@@ -27,14 +27,14 @@ The following plugin hooks are available:
 - `useHvTableStyles`: Ensures the correct styling of the table by injecting the column's `variant` and `align` options into the `HvTableHeader` and
   `HvTableCell` components (via `getHeaderProps` and `getCellProps`, respectively). Also adds support for injecting the `styles`, `className` and
   `classes` into the `HvTable`, `HvTableHeader`, and `HvTableCell` components.
-- `useHvPagination`: Eases the wiring of the `HvPagination` component when using pagination. [See pagination](/docs/guides-table-table-hooks-hooks-usehvpagination--use-hv-pagination-story).
-- `useHvRowSelection`: Creates and manages the UI for selecting rows. [See selection](/docs/guides-table-table-hooks-hooks-usehvrowselection--use-hv-selection-story).
-- `useHvBulkActions`: Eases the wiring of the `HvBulkActions` component. [See bulk selection and actions](/docs/guides-table-table-hooks-hooks-usehvbulkactions--use-hv-bulk-actions-story).
-- `useHvSortBy`: Manages the table's header sorting functionality. [See sorting](/docs/guides-table-table-hooks-hooks-usehvsortby--use-hv-sort-by-story).
-- `useHvRowExpand`: Manages the row expanding functionality. [See row expanding](/docs/guides-table-table-hooks-hooks-usehvrowexpand--use-hv-row-expand-story).
-- `useHvGroupBy`: Allows defining header groups. [See selection](/docs/guides-table-table-hooks-hooks-usehvgroupby--use-hv-group-by-story).
-- `useHvTableSticky`: Allows defining sticky headers and columns. [See sticky headers and columns](/docs/guides-table-table-hooks-hooks-usehvtablesticky--use-hv-table-sticky-story).
-- `useHvHeaderGroups`: Allows defining grouped headers. [See grouped headers](/docs/guides-table-table-hooks-hooks-usehvheadergroups--use-hv-header-groups-story).
+- `useHvPagination`: Eases the wiring of the `HvPagination` component when using pagination. [See pagination](./?path=/docs/visualizations-table-table-hooks-usehvpagination--docs).
+- `useHvRowSelection`: Creates and manages the UI for selecting rows. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvrowselection--docs).
+- `useHvBulkActions`: Eases the wiring of the `HvBulkActions` component. [See bulk selection and actions](./?path=/docs/visualizations-table-table-hooks-usehvbulkactions--docs).
+- `useHvSortBy`: Manages the table's header sorting functionality. [See sorting](./?path=/docs/visualizations-table-table-hooks-usehvsortby--docs).
+- `useHvRowExpand`: Manages the row expanding functionality. [See row expanding](./?path=/docs/visualizations-table-table-hooks-usehvrowexpand--docs).
+- `useHvGroupBy`: Allows defining header groups. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvgroupby--docs).
+- `useHvTableSticky`: Allows defining sticky headers and columns. [See sticky headers and columns](./?path=/docs/visualizations-table-table-hooks-usehvtablesticky--docs).
+- `useHvHeaderGroups`: Allows defining grouped headers. [See grouped headers](./?path=/docs/visualizations-table-table-hooks-usehvheadergroups--docs).
 
 <Canvas>
   <Story name="Table Hooks" story={UseHvHooksStory} />
