--- a/docs/foundation/colors/Colors.stories.mdx
+++ b/docs/foundation/colors/Colors.stories.mdx
@@ -15,7 +15,7 @@ Example of a color variable:
 theme.colors.atmo5;
 ```
 
-**Note:** Colors names have changed in UI Kit v5.x. Please be sure to check the [colors mapping table](/docs/overview-migration-from-v4-x--page#colors) on the migration guide.
+**Note:** Colors names have changed in UI Kit v5.x. Please be sure to check the [colors mapping table](./?path=/docs/overview-migration-from-v4-x--docs#colors) on the migration guide.
 
 <Story name="Main">
   <Colors />
